--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ node_modules/.cache/vue-loader/11f5675b9e0ffbf2a382d9ed4c4e28d4.json
 node_modules/.cache/vue-loader/744ed60623d40a2b55c61e2e89c76748.json
 node_modules/.cache/vue-loader/932e194d2b1f8a1825ff3788e67ea3de.json
 node_modules/.cache/vue-loader/de0dfda1b30be4fdfec311080beff33c.json
+node_modules
