--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
-    "execa": "latest"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
